--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.02MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-333.7KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇨🇳 中国-4.85MB/s(Youtube:不良林), server: 112.64.98.133, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 112.64.98.133}}
-  - {name: 🇨🇳 中国-739.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.42MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-329.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇸🇬 新加坡-2.04MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.84MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
+  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 19374, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.04MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.84MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-329.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
