--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.83MB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-300.7KB/s(Youtube:不良林), server: us12.chunyua.online, port: 14725, type: trojan, password: 7323b7f1-dcb5-499d-b6ae-f51a638ba826, sni: us12.chunyua.online, skip-cert-verify: true}
   - {name: 🇬🇧 英国-925.2KB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
-  - {name: 🇨🇳 中国-4.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-usa3-242, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-198.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇻🇳 越南-1.57MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-551.0KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: cs.bgp.liuliangzhuanfa.xyz, port: 33514, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: cs.bgp.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 未知国家-3.18MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 23959a9d-be8b-45d7-b284-5a3f9f29039a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: quangtien.akamaized.net}}
+  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-usa3-242, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: cs.bgp.liuliangzhuanfa.xyz, port: 33514, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: cs.bgp.liuliangzhuanfa.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-725.1KB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-391.1KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.66MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-925.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-198.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 未知国家-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-725.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-925.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-198.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 未知国家-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-725.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-925.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-198.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 未知国家-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-725.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-925.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-198.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 未知国家-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-725.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-925.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-198.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 未知国家-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-725.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-925.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-198.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 未知国家-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-725.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-925.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-198.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-551.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 未知国家-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-725.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
